k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gpa-prod
  labels:
    app.kubernetes.io/part-of: gpa-management
    environment: production
